--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         </a>
     </header>  
     <main>
-        <img src="img/_33V5087.JPG" alt="gracht in amsterdam">
+        <img src="img/_33V5087.jpg" alt="gracht in amsterdam">
 
         <h1> Welkom bij de groene gracht</h1>
         <h2> Op deze site krijg je alles te weten over het initiatief voor de groene grachten in amsterdam en de impact die het heeft op het millieu en de waterkwaliteit van de gracht</h2>
