--- a/millieu-impact.html
+++ b/millieu-impact.html
@@ -14,7 +14,7 @@
         </a>
     </header>  
     <main>
-        <img src="img/_33V5086.jpg" alt="gracht in amsterdam">
+        <img src="img/33V5086.jpg" alt="gracht in amsterdam">
 
         <h1> De impact op het millieu van de gracht</h1>
         <h2> Watertuinen in de Amsterdamse grachten spelen een cruciale rol bij het verbeteren van de milieukwaliteit. Door de aanwezigheid van gevarieerde vegetatie fungeren deze tuinen als natuurlijke filters, waarbij planten verontreinigingen uit het water absorberen. Dit proces draagt aanzienlijk bij aan de zuivering van het water, wat resulteert in een verbeterde waterkwaliteit in de grachten.
