--- a/over.html
+++ b/over.html
@@ -14,7 +14,7 @@
         </a>
     </header>  
     <main>
-        <img src="img/33V5075.jpg" alt="gracht in amsterdam">
+        <img src="img/33V5075.JPG" alt="gracht in amsterdam">
 
         <h1> Over het initiatief</h1>
         <h2> de watertuinen in amsterdam zijn een initiatief gestart doort de bewoners van amsterdam in samenwerking met natuur een millieuteam zuid om de grachten van amsterdam een beetje op te fleuren en natuurlijk om de biodiversiteit te helpen in de gracht.
